# DE_ZoomCamp

./: README.md
HW_1/: DockerFile  ingest_data.py  pipeline_to_pg.ipynb  pyproject.toml  questions.sql
